# envotate

./: .flake8  README.md  mkdocs.yml  mypy.ini  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
docs/: index.md  usage.md
envotate/: __init__.py  env.py  errors.py  exceptions.py  types.py  typing.py
tests/: conftest.py  test_classes.py  test_env.py  test_envotate.py  test_modules.py  test_readme.py  test_regex.py  test_types.py
tests/testapp/: main.py  readme.py  settings.py
