[tool.black]
line-length = 88
target-version = ['py39']
include = '\.py$'
exclude = '''
(
  /(
      \.
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytest_cache
    | \.idea
    | \.cache
    | bin
    | config
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --durations=10 -p no:logging -s --ignore .venv --cov=envotate --cov-fail-under=100 --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = [".", "envotate"]
norecursedirs = [
  "data",
  "static",
  "node_modules",
  "bin",
  "dist",
  "build",
  "docs",
  ".mypy_cache",
  ".pytest_cache",
  ".secret",
  ".txt",
  ".idea",
  ".git",
  ".venv",
  "*.egg",
  ".eggs",
  ".git",
  ".github",
  ".poetry",
  "__pycache__",
]


[tool.poetry]
name = "envotate"
version = "0.0.1"
description = "Settings management using environment variables and type annotations."
authors = ["Jordan Eremieff <jordan@eremieff.com>"]
license = "MIT"
packages = [{ include = "envotate" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "*"
setuptools = "^62.3.2"
twine = "^4.0.0"
wheel = "^0.37.1"
flake8 = "^4.0.1"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.15"
mkautodoc = "^0.1.0"
Pygments = "^2.12.0"
pymdown-extensions = "^9.4"
rich = "^12.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
